# ererererer

./: CMakeLists.txt  README.md
assets/shaders/: environment.frag.glsl  environment.vert.glsl  heightmap.frag.glsl  heightmap.vert.glsl  standard.frag.glsl  standard.vert.glsl
src/: components.cpp  components.h  engine.cpp  engine.h  macros.h  main.cpp  world.h
src/gfx/: camera.cpp  camera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/sim/: erosion.cpp  erosion.h
src/utility/: defer.h  transparent_string_hash.h
